[package]
name = "async-midi"
version = "0.1.0"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
description = "Async MIDI Library. Currently just reserving crate name. WIP!!"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
